# routes/api.mjs
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import validate from '../app/middlewares/validate.mjs';
 import ApiController from '../app/controllers/ApiController.mjs';
 import auth from '../app/middlewares/Auth.mjs';
+import auth2FA from '../app/middlewares/Auth2FA.mjs';
 import bitacora from '../app/middlewares/bitacora.mjs';
 import Call from '../app/utils/Call.mjs';
 import routesUsers from './api/usuario.mjs';
@@ -17,7 +18,7 @@ const router = Router();
 router.post('/v1/login', [validate(loginSchema)], Call(ApiController.login));
 router.post('/v1/logout', [auth, bitacora], Call(ApiController.logout));
 router.post('/v1/2fa', [validate(twoFactorAuthSchema)], Call(ApiController.twoFactorAuthLoginChoose));
-router.post('/v1/2fa/verify/:id_user', Call(ApiController.verifyTwoFactorAuthCode));
+router.post('/v1/2fa/verify', [auth2FA], Call(ApiController.verifyTwoFactorAuthCode));
 router.post('/v1/2fa/code', Call(ApiController.sendCode));
 router.post('/v1/2fa/verification/token', Call(ApiController.sendVerificationToken));
 router.get('/v1/verification/user/:token', Call(ApiController.confirmUser));
